tests/NormalTests/paczka1/small_fuzzy/59109640.err
Error in line 4: jqI8 S966 51,1
Error in line 1: Z0L88mJeIC S363 17,6
Error in line 5: jqI8 S569 10,0
